--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,11 +6,11 @@
 	"recommendations": [
 		"ms-vscode.cpptools",
 		"mhutchie.git-graph",
-		"jebbs.plantuml"
+		"jebbs.plantuml",
+		"ms-ceintl.vscode-language-pack-ja",
+		"pkief.material-icon-theme",
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
-		"ms-ceintl.vscode-language-pack-ja",
-		"pkief.material-icon-theme",
 	]
 }
