--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "plantuml.diagramsRoot": "uml/src",
   "plantuml.exportOutDir": "uml/dist",
+  "editor.tabSize": 2,
+  "editor.insertSpaces": false,
+  "editor.useTabStops": true,
 }
